fixed alignment

--- a/contact/stylesheets/main.css
+++ b/contact/stylesheets/main.css
@@ -12,5 +12,5 @@ body {
 .header {
   color:#E8E8E8;
   background-color: #333A56;
-  text-align: center;
+  text-align: left;
 }
